--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,10 +9,10 @@ pipeline {
         ansiColor('xterm')
     }
     stages {
-        stage('Init') {
+        stage('Test') {
             steps {
                 sh """
-                    echo 'this is testing
+                    echo 'this is testing'
                 """
             }
         }
