--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage('Test') {
             steps {
                 sh """
-                    echo 'this is testing'
+                    npm install
                 """
             }
         }
