--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
             steps {
                 def packageJson = readJSON file: 'package.json'
                 def appVersion = packageJson.version
+                echo "application version: $appVersion"
             }
         }
         stage('Test') {
@@ -20,7 +21,7 @@ pipeline {
                 sh """
                     npm install
                     ls -ltr
-                    echo $appVersion
+                    echo "application version: $appVersion"
                 """
             }
         }
