--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,9 @@ pipeline {
         disableConcurrentBuilds()
         ansiColor('xterm')
     }
+    environment{
+        def appVersion = ''
+    }
     stages {
         stage('read the version') {
             steps {
