--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
             steps {
                 script {
                     def packageJson = readJSON file: 'package.json'
-                    def appVersionVERSION = packageJson.version
+                    def appVersion = packageJson.version
                     echo "application version: $appVersion"
                 }
 
