--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
 
             }
         }
-        stage('Test') {
+        stage('Install Dependencies') {
             steps {
                 sh """
                     npm install
@@ -31,11 +31,12 @@ pipeline {
                 """
             }
         }
+        
     }
     post { 
         always { 
             echo 'I will always say Hello again!'
-            deleteDir()
+            
         }
         success {
             echo 'I will shown when it is success'
