--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,12 +31,19 @@ pipeline {
                 """
             }
         }
-        
+        stage('Build') {
+            steps {
+                sh """
+                    zip -r backend-${appVersion}.zip * -x jenkinsfile -x backend-${appVersion}.zip 
+                    ls -ltr
+                """
+            }
+        }
     }
     post { 
         always { 
             echo 'I will always say Hello again!'
-            
+            deleteDir()
         }
         success {
             echo 'I will shown when it is success'
